kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vkube-hello-service
spec:
  selector:
    app: vkube-hello
  ports:
    - name: grpc
      protocol: TCP
      port: 2200
      targetPort: 22000
