kubernetes/gateway-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vkube-hello
spec:
  hosts:
    - "*"
  gateways:
    - vkube-hello-gateway
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: vkube-hello-service
            port:
              number: 2200
