kubernetes/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vkube-hello-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vkube-hello
spec:
  hosts:
  - "*"
  gateways:
  - vkube-hello-gateway
  http:
  - match:
    - uri:
        prefix: /api
    - uri:
        exact: /rpc
    route:
    - destination:
        host: vkube-hello-service
        port:
          number: 2200
